Remove github and twitter buttons

--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: 
-  - title: github
-    url: 
   - title: linkedin
+    url: 
+  - title: 
+    url: 
+  - title: 
     url: 
