add linkedin social link

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ permalink: pretty
 
 social:
   - title: linkedin
-    url: 
+    url: https://www.linkedin.com/company/a-million-dreams-llc
   - title: 
     url: 
   - title: 
